[package]
edition = "2024"
license-file = "LICENSE"
name = "calculator"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
evalexpr = {version = "12.0.2", default-features = false}
wasm-bindgen = {version = "0.2.100", default-features = false}

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"
strip = true
